--- a/style.css
+++ b/style.css
@@ -9,6 +9,63 @@
 html {
   font-size: 62.5%;
   font-family: "Poppins", sans-serif;
+  overflow: hidden auto;
+}
+
+#header,
+.main {
+  padding: 1rem 1.5rem;
+  background-color: #335c67;
+  text-align: center;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin-bottom: 2rem;
+  width: 100vw;
+}
+#header {
+  position: fixed;
+}
+
+.main {
+  display: none;
+}
+
+span {
+  font-family: "Zen Dots", cursive;
+  margin-right: 1rem;
+}
+
+.container {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+
+.container img {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  width: 20rem;
+  height: 25rem;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 10rem;
+  transition: all 0.2s;
+}
+
+.container img:hover {
+  transform: scale(1.01);
+}
+.container h1 {
+  text-align: center;
+  width: 20rem;
+  color: #333;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  padding: 0.5rem 0;
+  border-top: 0;
+  margin-bottom: 5rem;
 }
 
 .top-table tr {
@@ -17,48 +74,25 @@ html {
   color: white;
 }
 
-.top-table:hover {
-  opacity: 0.7;
-}
-
-.top-table td {
-  width: 33%;
-  border: 5px solid white;
-  padding: 5px 10px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.top-table td:hover {
-  background-color: white;
-  color: black;
-}
-
-.top-table img {
-  width: 100px;
-  height: 100px;
-  border-radius: 20px;
-}
-
 .bottom-table {
-  border: 10px solid black;
+  border: 5px solid #335c67;
   width: 100%;
-  position:absolute;
-  bottom:0;
-}
-
-.bottom-table tr:hover {
-  background-color: gray;
 }
 
 .bottom-table td {
-  font-size: 20px;
-  border: 5px solid gray;
+  font-size: 2rem;
+  border: 1px solid #335c67;
   text-align: center;
 }
 
 .bottom-table img {
-  width: 60px;
-  height: 60px;
-  border-radius: 10px;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 3px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin: 1rem 0;
+}
+
+.bottom-table img:hover {
+  transform: scale(1.05);
 }
